# sfml_sat

./: CMakeLists.txt  Readme.md
sfml_sat/: CMakeLists.txt
sfml_sat/src/: main.cc
